--- a/single-repo.html
+++ b/single-repo.html
@@ -23,8 +23,9 @@
   
   <main>
 
-    <div id="issues-container" class="list-group">
+    <div id="issues-container" class="list-group"></div>
 
+    <div id="limit-warning"></div>
   
   </main>
 
