--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
           <button type="submit" class="btn">Get User</button>
         </form>
       </div>
+      <div class="card">
+        <h3 class="card-header text-uppercase">Search By Topic</h3>
+
+        <div class="card-body" id="language-buttons">
+          <button class="btn" data-language="javascript">Javascript</button>
+          <button class="btn" data-language="python">Python</button>
+          <button class="btn" data-language="ruby">Ruby</button>
+        </div>
+      </div>
     </div>
   
     <div class="col-12 col-md-8">
